--- a/settings.json
+++ b/settings.json
@@ -23,7 +23,7 @@
 						"Engine"		:"DEBUG",
 						"ASemaphore"	:"ERROR",
 						"Session"		:"ERROR",
-						"Application"	:"ERROR"
+						"Application"	:"ERROR",
 						"Page"			:"DEBUG"
 					},
 	"nodes"	       : 1
